// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile 1 getAllMOSObjects 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqAll>
    <pause>0</pause>
  </mosReqAll>
</mos>"
`;

exports[`Profile 1 getAllMOSObjects 2`] = `
[
  {
    "AirStatus": undefined,
    "Changed": MosTime {
      "_time": 2009-11-01T14:35:55.000Z,
      "_timezone": "Z",
      "_timezoneDeclaration": "",
      "_timezoneZuluIndicator": "Z",
    },
    "ChangedBy": MosString128 {
      "_str": "Chris",
      "strict": true,
    },
    "Created": MosTime {
      "_time": 2009-10-31T23:39:12.000Z,
      "_timezone": "Z",
      "_timezoneDeclaration": "",
      "_timezoneZuluIndicator": "Z",
    },
    "CreatedBy": MosString128 {
      "_str": "Chris",
      "strict": true,
    },
    "Description": {
      "elements": [
        {
          "$name": "p",
          "$type": "element",
          "elements": [
            {
              "$type": "text",
              "text": "Exterior footage of",
            },
            {
              "$name": "em",
              "$type": "text",
              "text": "Baley Park Hotel",
            },
            {
              "$type": "text",
              "text": "on fire with natural sound. Trucks are visible for the first portion of the clip.",
            },
            {
              "$name": "em",
              "$type": "text",
              "text": "CG locator at 0:04 and duration 0:05, Baley Park Hotel.",
            },
          ],
        },
        {
          "$name": "p",
          "$type": "element",
          "elements": [
            {
              "$name": "tab",
              "$type": "element",
            },
            {
              "$type": "text",
              "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
            },
          ],
        },
        {
          "$name": "p",
          "$type": "text",
          "em": "Clip has been doubled for pad on voice over.",
          "text": "Clip has been doubled for pad on voice over.",
        },
      ],
    },
    "Duration": undefined,
    "Group": undefined,
    "ID": MosString128 {
      "_str": "M000123",
      "strict": true,
    },
    "MosAbstract": undefined,
    "Paths": [
      {
        "Description": "MPEG2 Video",
        "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
        "Type": "PATH",
      },
      {
        "Description": "WM9 750Kbps",
        "Target": "http://server/proxy/clipe.wmv",
        "Type": "PROXY PATH",
      },
      {
        "Description": "MOS Object",
        "Target": "http://server/proxy/clipe.xml",
        "Type": "METADATA PATH",
      },
    ],
    "Revision": undefined,
    "Slug": MosString128 {
      "_str": "HOTEL FIRE",
      "strict": true,
    },
    "Status": undefined,
    "TimeBase": undefined,
    "Type": undefined,
  },
  {
    "AirStatus": "READY",
    "Changed": MosTime {
      "_time": 2009-11-01T15:21:15.000Z,
      "_timezone": "Z",
      "_timezoneDeclaration": "",
      "_timezoneZuluIndicator": "Z",
    },
    "ChangedBy": MosString128 {
      "_str": "Chris",
      "strict": true,
    },
    "Created": MosTime {
      "_time": 2009-11-01T15:19:01.000Z,
      "_timezone": "Z",
      "_timezoneDeclaration": "",
      "_timezoneZuluIndicator": "Z",
    },
    "CreatedBy": MosString128 {
      "_str": "Phil",
      "strict": true,
    },
    "Description": "VOICE OVER MATERIAL OF COLSTAT MURDER SITES SHOT ON 1-NOV.",
    "Duration": 800,
    "Group": undefined,
    "ID": MosString128 {
      "_str": "M000224",
      "strict": true,
    },
    "MosAbstract": undefined,
    "MosExternalMetaData": [
      {
        "MosPayload": {
          "Approved": 0,
          "Creator": "SHOLMES",
          "ModBy": "LJOHNSTON",
          "ModTime": 20010308142001,
          "Owner": "SHOLMES",
          "TextTime": 278,
          "mediaTime": 0,
          "text": 0,
        },
        "MosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
        "MosScope": "STORY",
      },
    ],
    "Paths": [
      {
        "Description": "MPEG2 Video",
        "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
        "Type": "PATH",
      },
      {
        "Description": "WM9 750Kbps",
        "Target": "http://server/proxy/clipe.wmv",
        "Type": "PROXY PATH",
      },
      {
        "Description": "MOS Object",
        "Target": "http://server/proxy/clipe.xml",
        "Type": "METADATA PATH",
      },
    ],
    "Revision": 4,
    "Slug": MosString128 {
      "_str": "COLSTAT MURDER:VO",
      "strict": true,
    },
    "Status": "UPDATED",
    "TimeBase": 59.94,
    "Type": "VIDEO",
  },
]
`;

exports[`Profile 1 getMOSObject 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosReqObj>
    <objID>M000123</objID>
  </mosReqObj>
</mos>"
`;

exports[`Profile 1 getMOSObject 2`] = `
{
  "AirStatus": "READY",
  "Changed": MosTime {
    "_time": 2009-10-31T23:39:12.000Z,
    "_timezone": "Z",
    "_timezoneDeclaration": "",
    "_timezoneZuluIndicator": "Z",
  },
  "ChangedBy": MosString128 {
    "_str": "Chris",
    "strict": true,
  },
  "Created": MosTime {
    "_time": 2009-10-31T23:39:12.000Z,
    "_timezone": "Z",
    "_timezoneDeclaration": "",
    "_timezoneZuluIndicator": "Z",
  },
  "CreatedBy": MosString128 {
    "_str": "Chris",
    "strict": true,
  },
  "Description": {
    "elements": [
      {
        "$name": "p",
        "$type": "element",
        "elements": [
          {
            "$type": "text",
            "text": "Exterior footage of",
          },
          {
            "$name": "em",
            "$type": "text",
            "text": "Baley Park Hotel",
          },
          {
            "$type": "text",
            "text": "on fire with natural sound. Trucks are visible for the first portion of the clip.",
          },
          {
            "$name": "em",
            "$type": "text",
            "text": "CG locator at 0:04 and duration 0:05, Baley Park Hotel.",
          },
        ],
      },
      {
        "$name": "p",
        "$type": "element",
        "elements": [
          {
            "$name": "tab",
            "$type": "element",
          },
          {
            "$type": "text",
            "text": "Cuts to view of fire personnel exiting hotel lobby and cleaning up after the fire is out.",
          },
        ],
      },
      {
        "$name": "p",
        "$type": "text",
        "em": "Clip has been doubled for pad on voice over.",
        "text": "Clip has been doubled for pad on voice over.",
      },
    ],
  },
  "Duration": 1800,
  "Group": "Show 7",
  "ID": MosString128 {
    "_str": "M000123",
    "strict": true,
  },
  "MosAbstract": {
    "elements": [
      {
        "$name": "b",
        "$type": "text",
        "text": "Hotel Fire",
      },
      {
        "$name": "em",
        "$type": "text",
        "text": "vo",
      },
      {
        "$type": "text",
        "text": ":30",
      },
    ],
  },
  "MosExternalMetaData": [
    {
      "MosPayload": {
        "Approved": 0,
        "Creator": "SHOLMES",
        "ModBy": "LJOHNSTON",
        "ModTime": 20010308142001,
        "Owner": "SHOLMES",
        "TextTime": 278,
        "mediaTime": 0,
        "text": 0,
      },
      "MosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08",
      "MosScope": "STORY",
    },
  ],
  "Paths": [
    {
      "Description": "MPEG2 Video",
      "Target": "\\server\\media\\clip392028cd2320s0d.mxf",
      "Type": "PATH",
    },
    {
      "Description": "WM9 750Kbps",
      "Target": "http://server/proxy/clipe.wmv",
      "Type": "PROXY PATH",
    },
    {
      "Description": "MOS Object",
      "Target": "http://server/proxy/clipe.xml",
      "Type": "METADATA PATH",
    },
  ],
  "Revision": 1,
  "Slug": MosString128 {
    "_str": "Hotel Fire",
    "strict": true,
  },
  "Status": "NEW",
  "TimeBase": 59.94,
  "Type": "VIDEO",
}
`;

exports[`Profile 1 onRequestAllMOSObjects 1`] = `
[
  [],
]
`;

exports[`Profile 1 onRequestAllMOSObjects 2`] = `
{
  "mos": {
    "messageID": {
      "_text": 1634,
    },
    "mosAck": {
      "objID": {
        "_text": 0,
      },
      "objRev": {
        "_text": 0,
      },
      "status": {
        "_text": "ACK",
      },
      "statusDescription": {},
    },
    "mosID": {
      "_text": "our.mos.id",
    },
    "ncsID": {
      "_text": "their.mos.id",
    },
  },
}
`;

exports[`Profile 1 onRequestAllMOSObjects 3`] = `
{
  "mos": {
    "messageID": 99999,
    "mosID": "our.mos.id",
    "mosListAll": {
      "mosObj": [
        {
          "created": "2001-01-01T00:00:00,000",
          "createdBy": "Jonas",
          "mosExternalMetadata": {
            "mosPayload": {
              "Approved": 0,
              "Creator": "SHOLMES",
              "ModBy": "LJOHNSTON",
              "ModTime": 20010308142001,
              "Owner": "SHOLMES",
              "TextTime": 278,
              "mediaTime": 0,
              "text": 0,
            },
            "mosSchema": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>",
            "mosScope": "STORY",
          },
          "objAir": "READY",
          "objDur": 1500,
          "objID": "M000123",
          "objPaths": {
            "objMetadataPath": {
              "techDescription": "MOS Object",
              "text": "http://server/proxy/clipe.xml",
            },
            "objPath": {
              "techDescription": "MPEG2 Video",
              "text": "\\server\\media\\clip392028cd2320s0d.mxf",
            },
            "objProxyPath": {
              "techDescription": "WM9 750Kbps",
              "text": "http://server/proxy/clipe.wmv",
            },
          },
          "objRev": 1,
          "objSlug": "My new object",
          "objTB": 50,
          "objType": "VIDEO",
          "status": "READY",
        },
        {
          "created": "2001-01-01T00:00:00,000",
          "createdBy": "Jonas",
          "objAir": "READY",
          "objDur": 1000,
          "objID": "M0003523",
          "objPaths": {
            "objMetadataPath": {
              "techDescription": "MOS Object",
              "text": "http://server/proxy/clipe.xml",
            },
            "objPath": {
              "techDescription": "MPEG2 Video",
              "text": "\\server\\media\\clip392028cd2320s0d.mxf",
            },
            "objProxyPath": {
              "techDescription": "WM9 750Kbps",
              "text": "http://server/proxy/clipe.wmv",
            },
          },
          "objRev": 1,
          "objSlug": "My new object 2",
          "objTB": 50,
          "objType": "VIDEO",
          "status": "READY",
        },
      ],
    },
    "ncsID": "their.mos.id",
  },
}
`;

exports[`Profile 1 onRequestMOSObject 1`] = `
[
  [
    "M000123",
  ],
]
`;

exports[`Profile 1 onRequestMOSObject 2`] = `
{
  "mos": {
    "messageID": {
      "_text": 1633,
    },
    "mosID": {
      "_text": "our.mos.id",
    },
    "mosObj": {
      "created": {
        "_text": "2001-01-01T00:00:00,000",
      },
      "createdBy": {
        "_text": "Jonas",
      },
      "mosExternalMetadata": {
        "mosPayload": {
          "Approved": {
            "_text": 0,
          },
          "Creator": {
            "_text": "SHOLMES",
          },
          "ModBy": {
            "_text": "LJOHNSTON",
          },
          "ModTime": {
            "_text": 20010308142001,
          },
          "Owner": {
            "_text": "SHOLMES",
          },
          "TextTime": {
            "_text": 278,
          },
          "mediaTime": {
            "_text": 0,
          },
        },
        "mosSchema": {
          "_text": "http://MOSA4.com/mos/supported_schemas/MOSAXML2.08</mosSchema>",
        },
        "mosScope": {
          "_text": "STORY",
        },
      },
      "objAir": {
        "_text": "READY",
      },
      "objDur": {
        "_text": 1500,
      },
      "objID": {
        "_text": "M000123",
      },
      "objPaths": {
        "objMetadataPath": {
          "_attributes": {
            "techDescription": "MOS Object",
          },
          "_text": "http://server/proxy/clipe.xml",
        },
        "objPath": {
          "_attributes": {
            "techDescription": "MPEG2 Video",
          },
          "_text": "\\server\\media\\clip392028cd2320s0d.mxf",
        },
        "objProxyPath": {
          "_attributes": {
            "techDescription": "WM9 750Kbps",
          },
          "_text": "http://server/proxy/clipe.wmv",
        },
      },
      "objRev": {
        "_text": 1,
      },
      "objSlug": {
        "_text": "My new object",
      },
      "objTB": {
        "_text": 50,
      },
      "objType": {
        "_text": "VIDEO",
      },
      "status": {
        "_text": "READY",
      },
    },
    "ncsID": {
      "_text": "their.mos.id",
    },
  },
}
`;

exports[`Profile 1 sendMOSObject 1`] = `
"<mos>
  <ncsID>their.mos.id</ncsID>
  <mosID>our.mos.id</mosID>
  <messageID>xx</messageID>
  <mosObj>
    <objID>M000123</objID>
    <objSlug>theslug</objSlug>
    <mosAbstract>abstract!</mosAbstract>
    <objGroup>grp</objGroup>
    <objType>VIDEO</objType>
    <objTB>50</objTB>
    <objRev>5</objRev>
    <objDur>1000</objDur>
    <status>NOT READY</status>
    <objAir>READY</objAir>
    <objPaths>
      <objPath techDescription="path">folder/target</objPath>
    </objPaths>
    <createdBy>me!</createdBy>
    <created>2005-07-01T15:23:18,000Z</created>
  </mosObj>
</mos>"
`;
